fixed footer position

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <title>realtimeapp</title>
+    <title>Realtime App</title>
   </head>
   <body>
     <noscript>
